--- a/Views/Registro.xaml
+++ b/Views/Registro.xaml
@@ -2,20 +2,27 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="hFonsecaExamen.Views.Registro"
-             Title="Registro">
+             >
     <VerticalStackLayout
                 Spacing="25"
                 Padding="25"
-        Background="White"
+                Background="White"
                 >
+        <Label
+                x:Name="lblUsuario"
+                FontSize="16"
+                TextColor="red"
+                HorizontalTextAlignment="End"
+        />
 
- 
         <Label 
             Text="REGISTRO"
             TextColor="Black"
-            FontSize="20"
+            FontAttributes="Bold"
+            FontSize="22"
             VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            HorizontalOptions="Center" 
+         />
 
         <Grid>
             <Grid.RowDefinitions>
@@ -128,7 +135,67 @@
            />
 
         </Grid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
 
+            <Label 
+                   Text="Nombre"
+                   TextColor="Black"
+                   FontSize="20"
+                   HorizontalOptions="Center" 
+                   Grid.Row="0"
+                   Grid.Column="0"
+           />
+            <Label 
+                   Text="Apellido"
+                   TextColor="Black"
+                   FontSize="20"
+                   HorizontalOptions="Center" 
+                   Grid.Row="0"
+                   Grid.Column="1"
+           />
+            <Label 
+                   Text="Edad"
+                   TextColor="Black"
+                   FontSize="20"
+                   HorizontalOptions="Center" 
+                   Grid.Row="0"
+                   Grid.Column="2"
+           />
+            <Entry  x:Name="txtNombre"
+                   TextColor="Black"
+                    Placeholder="Ingrese Nmbre"
+                   Grid.Row="1"
+                   Grid.Column="0"
+           />
+            <Entry  x:Name="txtApellido"
+                    Placeholder="Ingrese Apellido"
+                   TextColor="Black"
+                   Grid.Row="1"
+                   Grid.Column="1"
+           />
+            <Entry  x:Name="txtEdad"
+                    Placeholder="Ingrese la edad"
+                   TextColor="Black"
+                    Keyboard="Numeric"
+                    MaxLength="2"
+                   Grid.Row="1"
+                   Grid.Column="2"
+           />
+
+        </Grid>
+        <Button x:Name="btnVerResumen"
+                Text="Ver Resumen"
+                Clicked="btnVerResumen_Clicked"
+            />
 
     </VerticalStackLayout>
 </ContentPage>
