--- a/Views/Resumen.xaml
+++ b/Views/Resumen.xaml
@@ -2,11 +2,190 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="hFonsecaExamen.Views.Resumen"
-             Title="Resumen">
-    <VerticalStackLayout>
+ >
+    <VerticalStackLayout
+           Spacing="25"
+           Padding="25"
+           Background="White"
+     >
+        <Label
+           x:Name="lblUsuario2"
+           FontSize="16"
+           TextColor="red"
+           HorizontalTextAlignment="End"
+        />
+
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="RESUMEN"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Label 
+               Text="* Nombre"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="0"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblNombre2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="0"
+               Grid.Column="1"
+             />
+
+            <Label 
+               Text="* Apellido"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="1"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblApellido2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="1"
+               Grid.Column="1"
+             />
+
+            <Label 
+               Text="* Edad"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="2"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblEdad2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="2"
+               Grid.Column="1"
+             />
+
+            <Label 
+               Text="* Fecha"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="3"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblFecha2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="3"
+               Grid.Column="1"
+             />
+
+            <Label 
+               Text="* Ciudad"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="4"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblCiudad2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="4"
+               Grid.Column="1"
+             />
+            <Label 
+               Text="* País"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="5"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblPais2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="5"
+               Grid.Column="1"
+             />
+            <Label 
+               Text="* Monto inicial"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="6"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblMontoInicial2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="6"
+               Grid.Column="1"
+             />
+            <Label 
+               Text="* PagoMensual"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="7"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblPagoMensual2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="7"
+               Grid.Column="1"
+             />
+            <Label 
+               Text="* Pago Total"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="8"
+               Grid.Column="0"
+             />
+
+            <Label 
+               x:Name="lblPagoTotal2"
+               TextColor="Black"
+               FontSize="20"
+               Grid.Row="8"
+               Grid.Column="1"
+             />
+
+
+        </Grid>
+
+
+
     </VerticalStackLayout>
+    
+    
+    
+    
+    
 </ContentPage>
